...
  const viewModel = useViewModel<ProfileViewModel>(TYPES.ProfileViewModel);

  return (
    <SafeAreaView
      style={styles.safeArea}
      edges={['top', 'left', 'right']}
      testID="screen-profile"
    >
      <GradientView preset="header" style={styles.header}>
        <Text style={styles.headerTitle}>Perfil</Text>
      </GradientView>

      <View style={styles.content}>
...
